--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@sweetalert2/theme-dark": "^5.0.15",
     "@tanstack/react-query": "^5.8.7",
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "formik": "^2.4.5",
