--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.4",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@sweetalert2/theme-dark": "^5.0.15",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-table": "^8.10.7",
